@@ -31,6 +31,7 @@
 
 		<!-- jboss-parent override -->
 		<version.release.plugin>2.1</version.release.plugin>
+		<version.enforcer.plugin>3.0.0-M1</version.enforcer.plugin>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 
@@ -305,7 +306,7 @@
 							<includes>
 								<include>**/*IntegrationTest.java</include>
 							</includes>
-							<forkMode>none</forkMode>
+							<!--<forkMode>none</forkMode>-->
 						</configuration>
 						<executions>
 							<execution>
@@ -325,6 +326,22 @@
 								</configuration>
 							</execution>
 						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>jdk9</id>
+			<activation>
+				<jdk>9</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>-Dfile.encoding=UTF-8 --add-modules=ALL-SYSTEM</argLine>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
